fix: mobile spacing

--- a/frontend/components/TabbedFieldSections/TabbedFieldSections.css
+++ b/frontend/components/TabbedFieldSections/TabbedFieldSections.css
@@ -34,6 +34,7 @@
   width: 100%;
   padding: 20px;
   padding-bottom: 5px;
+  margin-bottom: 20px;
   background: #ffffff;
   border-radius: 4px;
   box-shadow: 2px 2px 10px 0 rgba(0,0,0,.03);
